[package]
edition = "2021"
name = "aunisoma"
version = "0.1.0"
authors = ["Walter Smith <walter@wrsmap.com>"]
resolver = "2"

[features]
default = ["rev-e", "use-rtt"]
rev-d = []
rev-e = []
use-itm = ["defmt-itm"]
use-rtt = ["defmt-rtt"]

[dependencies]
panic-halt = "1.0.0"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-4096",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    # "trace",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "stm32f103c8",
    "exti",
    "memory-x",
    "time-driver-any",
    "unstable-pac",
    "defmt",
] }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0" }
embassy-usb = { version = "0.4.0", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
heapless = "0.8.0"
static_cell = "2.1.0"
panic-itm = "0.4.2"
rfm69 = "0.6.0"
embedded-hal-bus = "0.2.0"
defmt = { version = "0.3.10", features = [] }

defmt-itm = { version = "0.3.0", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-futures = "0.1.1"
futures = { version = "0.3.31", default-features = false, features = [] }
num_enum = { version = "0.7.3", default-features = false, features = [] }

[profile.dev]
opt-level = "z"
lto = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[patch.crates-io]
embassy-usb-driver = { path = "../embassy/embassy-usb-driver" }
