[package]
edition = "2024"
name = "aunisoma"
version = "0.1.0"
authors = ["Walter Smith <walter@wrsmap.com>"]
resolver = "2"
rust-version = "1.85.0"

[features]
default = ["rev-e"]
rev-d = []
rev-e = []

[dependencies]
panic-halt = "1.0.0"

embedded-hal = { version = "0.2.7", features = [] }
embedded-hal-async = { version = "1.0.0", features = [] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-5120",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    # "trace",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "stm32f103c8",
    "exti",
    "memory-x",
    "rt",
    "time-driver-any",
    "unstable-pac",
    "defmt",
] }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0", features = ["tick-hz-1_000_000"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
heapless = "0.8.0"
static_cell = "2.1.0"
panic-itm = "0.4.2"
rfm69 = { version = "0.6.0", features = [] }
embedded-hal-bus = { version = "0.3.0", features = [] }
defmt = { version = "0.3.10", features = [] }
defmt-rtt = { version = "0.4.1" }
embassy-futures = "0.1.1"
futures = { version = "0.3.31", default-features = false, features = [] }
num_enum = { version = "0.7.3", default-features = false, features = [] }
async-trait = "0.1.86"
embedded-alloc = "0.6.0"
bare-metal = "1.0.0"
bitfield = "0.18.1"

# change lint defaults
[lints.rust]
elided-lifetimes-in-paths = "deny"

[profile.dev]
opt-level = "z"
codegen-units = 1 # better optimizations
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.release.package."*"]
opt-level = 3
